--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,17 +34,17 @@ jobs:
         run: pytest tests/ -v --tb=short
       
       - name: Check code style with black
-        run: black --check data_validator tests
+        run: black --check pipeval tests
       
       - name: Lint with flake8
         run: |
           pip install flake8
-          flake8 data_validator tests --max-line-length=100 --extend-ignore=E203,W503
+          flake8 pipeval tests --max-line-length=100 --extend-ignore=E203,W503
       
       - name: Type check with mypy
         run: |
           pip install mypy
-          mypy data_validator --ignore-missing-imports || true
+          mypy pipeval --ignore-missing-imports || true
 
   build:
     name: Build distribution
